--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 var code = params.get("code");
                 var shopId = params.get("shop_id");
                 if (code && shopId) {
-                    var newUrl = `http://localhost:3000/public/auth-shopee?code=${encodeURIComponent(
+                    var newUrl = `http://localhost:3000/auth-platform/shopee?code=${encodeURIComponent(
                         code
                     )}&shop_id=${encodeURIComponent(shopId)}`;
                     window.location.href = newUrl;
