--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
                 var params = new URLSearchParams(window.location.search);
                 var code = params.get("code");
                 var shopId = params.get("shop_id");
-                if (code && shopId) {
+                var state = params.get("state");
+
+                if (code && shopId && !state) {
                     var newUrl = `http://localhost:3000/auth-platform/shopee?code=${encodeURIComponent(
                         code
                     )}&shop_id=${encodeURIComponent(shopId)}`;
+                    window.location.href = newUrl;
+                }
+
+                if (code && !shopId && !state) {
+                    var newUrl = `http://localhost:3000/auth-platform/lazada?code=${encodeURIComponent(code)}`;
+                    window.location.href = newUrl;
+                }
+
+                if (code && !shopId && state) {
+                    var newUrl = `http://localhost:3000/auth-platform/tiktok?code=${encodeURIComponent(
+                        code
+                    )}&state=${encodeURIComponent(state)}`;
                     window.location.href = newUrl;
                 }
             })();
