--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+
         <script>
             (function () {
                 var params = new URLSearchParams(window.location.search);
@@ -12,19 +13,19 @@
                 var state = params.get("state");
 
                 if (code && shopId && !state) {
-                    var newUrl = `http://tmdt.bitas.com.vn/auth-platform/shopee?code=${encodeURIComponent(
+                    var newUrl = `http://localhost:3000/auth-platform/shopee?code=${encodeURIComponent(
                         code
                     )}&shop_id=${encodeURIComponent(shopId)}`;
                     window.location.href = newUrl;
                 }
 
                 if (code && !shopId && !state) {
-                    var newUrl = `http://tmdt.bitas.com.vn/auth-platform/lazada?code=${encodeURIComponent(code)}`;
+                    var newUrl = `http://localhost:3000/auth-platform/lazada?code=${encodeURIComponent(code)}`;
                     window.location.href = newUrl;
                 }
 
                 if (code && !shopId && state) {
-                    var newUrl = `http://tmdt.bitas.com.vn/auth-platform/tiktok?code=${encodeURIComponent(
+                    var newUrl = `http://localhost:3000/auth-platform/tiktok?code=${encodeURIComponent(
                         code
                     )}&state=${encodeURIComponent(state)}`;
                     window.location.href = newUrl;
